--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Application logs
+application_logs
+
+Prediction_Application/artifact
+rental_bike_demand
